InterfaceRedisRepositoryImplementer 问题修复，待续